# QtChatServer

./: AddMessageRequest.cpp  AddMessageRequest.h  AddMessageTask.cpp  AddMessageTask.h  CMakeLists.txt  ChatDataProvider.cpp  ChatDataProvider.h  ChatDataRequest.cpp  ChatDataRequest.h  ChatDataRequestType.h  ChatDataWrapper.cpp  ChatDataWrapper.h  ChatDataWrapperWorker.cpp  ChatDataWrapperWorker.h  CheckUsernameTask.cpp  CheckUsernameTask.h  GetHistoryRequest.cpp  GetHistoryRequest.h  GetHistoryTask.cpp  GetHistoryTask.h  Server_en_US.ts  SqlConnectionManager.cpp  SqlConnectionManager.h  SqlTask.cpp  SqlTask.h  TcpServer.cpp  TcpServer.h  TcpServerExecutor.cpp  TcpServerExecutor.h  UuidHash.h  main.cpp  mainwindow.cpp  mainwindow.h
